err/pyxmlsecurity.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/defusedxml'...
Listing './lib/python3.5/site-packages/defusedxml-0.5.0.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyXMLSecurity-0.17.egg-info'...
Listing './lib/python3.5/site-packages/pyconfig'...
Listing './lib/python3.5/site-packages/pyconfig-3.2.3.egg-info'...
Listing './lib/python3.5/site-packages/pytool'...
Listing './lib/python3.5/site-packages/pytool-3.4.1.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/xmlsec'...
Compiling './lib/python3.5/site-packages/xmlsec/__init__.py'...
***   File "./lib/python3.5/site-packages/xmlsec/__init__.py", line 319
    except XMLSigException, ex:
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xmlsec/crypto.py'...
***   File "./lib/python3.5/site-packages/xmlsec/crypto.py", line 182
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/xmlsec/rsa_x509_pem'...
Listing './lib/python3.5/site-packages/xmlsec/rsa_x509_pem/Crypto'...
Listing './lib/python3.5/site-packages/xmlsec/rsa_x509_pem/Crypto/PublicKey'...
Compiling './lib/python3.5/site-packages/xmlsec/rsa_x509_pem/Crypto/PublicKey/DSA.py'...
***   File "./lib/python3.5/site-packages/xmlsec/rsa_x509_pem/Crypto/PublicKey/DSA.py", line 40
    if pow(2, 159L) < q < pow(2, 160L):
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xmlsec/rsa_x509_pem/Crypto/PublicKey/RSA.py'...
***   File "./lib/python3.5/site-packages/xmlsec/rsa_x509_pem/Crypto/PublicKey/RSA.py", line 36
    p = q = 1L
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xmlsec/rsa_x509_pem/Crypto/PublicKey/number.py'...
***   File "./lib/python3.5/site-packages/xmlsec/rsa_x509_pem/Crypto/PublicKey/number.py", line 38
    bits, power = 0, 1L
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xmlsec/rsa_x509_pem/Crypto/PublicKey/qNEW.py'...
***   File "./lib/python3.5/site-packages/xmlsec/rsa_x509_pem/Crypto/PublicKey/qNEW.py", line 52
    powb = 2L << b
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/xmlsec/rsa_x509_pem/pyasn1'...
Listing './lib/python3.5/site-packages/xmlsec/rsa_x509_pem/pyasn1/codec'...
Listing './lib/python3.5/site-packages/xmlsec/rsa_x509_pem/pyasn1/codec/ber'...
Compiling './lib/python3.5/site-packages/xmlsec/rsa_x509_pem/pyasn1/codec/ber/decoder.py'...
***   File "./lib/python3.5/site-packages/xmlsec/rsa_x509_pem/pyasn1/codec/ber/decoder.py", line 47
    value = -1L
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xmlsec/rsa_x509_pem/pyasn1/codec/ber/encoder.py'...
***   File "./lib/python3.5/site-packages/xmlsec/rsa_x509_pem/pyasn1/codec/ber/encoder.py", line 184
    elif subid < 0 or subid > 0xFFFFFFFFL:
                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/xmlsec/rsa_x509_pem/pyasn1/codec/cer'...
Listing './lib/python3.5/site-packages/xmlsec/rsa_x509_pem/pyasn1/codec/der'...
Listing './lib/python3.5/site-packages/xmlsec/rsa_x509_pem/pyasn1/type'...
Compiling './lib/python3.5/site-packages/xmlsec/rsa_x509_pem/pyasn1/type/constraint.py'...
***   File "./lib/python3.5/site-packages/xmlsec/rsa_x509_pem/pyasn1/type/constraint.py", line 34
    except error.ValueConstraintError, why:
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xmlsec/rsa_x509_pem/pyasn1/type/tag.py'...
***   File "./lib/python3.5/site-packages/xmlsec/rsa_x509_pem/pyasn1/type/tag.py", line 54
    def __and__(self, (tagClass, tagFormat, tagId)):
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xmlsec/rsa_x509_pem/pyasn1/type/univ.py'...
***   File "./lib/python3.5/site-packages/xmlsec/rsa_x509_pem/pyasn1/type/univ.py", line 301
    except string.atol_error, why:
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xmlsec/rsa_x509_pem/test.py'...
***   File "./lib/python3.5/site-packages/xmlsec/rsa_x509_pem/test.py", line 131
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/xmlsec/test'...
Compiling './lib/python3.5/site-packages/xmlsec/test/p11_test.py'...
***   File "./lib/python3.5/site-packages/xmlsec/test/p11_test.py", line 163
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xmlsec/test/sign_verify_test.py'...
***   File "./lib/python3.5/site-packages/xmlsec/test/sign_verify_test.py", line 184
    print "Signed   SignatureValue: %s" % (repr(signed_sv))
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xmlsec/test/transform_test.py'...
***   File "./lib/python3.5/site-packages/xmlsec/test/transform_test.py", line 53
    print "C14N output (remove_whitespace={}, remove_comments={}) :\n{}".format(remove_whitespace, remove_comments, out)
                                                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xmlsec/tools.py'...
***   File "./lib/python3.5/site-packages/xmlsec/tools.py", line 36
    except getopt.error, msg:
                       ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
